--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <p>Ready to practice in real life? Find fun and motivating music events in your area.</p>
                     <p>Discover local meetups, join other Yousicians and share your experience! Yousician meetups can take many forms - it's all in the hands of the host, and you!</p>
                   </div>
-                   <div class="present_btn_wrap">
-                    <a href="/" class="present_btn">join meetup</a>
+                   <div class="present_btn_wrap center_button_wrap">
+                    <a href="/" class="present_btn center_button">join meetup</a>
                   </div>
                 </div>
               </div>
@@ -132,7 +132,7 @@
                     <p>Create engaging events where learners of all levels can experience the social elements of playing music together.</p>
                     <p>Come join the fun and arrange your own meetups. We’d love to have you on board!</p>
                   </div>
-                  <div class="present_btn_wrap">
+                  <div class="present_btn_wrap center_button_wrap">
                     <a href="/" class="present_btn center_button">host meetup</a>
                   </div>
                 </div>
