--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <p>Come join the fun and arrange your own meetups. We’d love to have you on board!</p>
                   </div>
                   <div class="present_btn_wrap center_button_wrap">
-                    <a href="/" class="present_btn center_button">host meetup</a>
+                    <a href="https://goo.gl/forms/xNtnkqtJG2TB3k8q2" class="present_btn center_button">host meetup</a>
                   </div>
                 </div>
               </div>
