--- a/index.html
+++ b/index.html
@@ -72,6 +72,42 @@
                    <div class="present_btn_wrap center_button_wrap">
                     <a href="/" class="present_btn center_button">join meetup</a>
                   </div>
+
+                  <!-- Begin Mailchimp Signup Form -->
+                  <div id="mc_embed_signup">
+                  <form action="https://yousician.us6.list-manage.com/subscribe/post?u=21f56c299f7340e662b9cb44e&amp;id=cd409607ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                      <div id="mc_embed_signup_scroll">
+                    
+                  <div class="mc-field-group">
+                    <label for="mce-EMAIL">Email Address </label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                  </div>
+
+                  <div class="mc-field-group">
+                    <label for="mce-group[14785]">City </label>
+                    <select name="group[14785]" class="REQ_CSS" id="mce-group[14785]">
+                    <option value=""></option>
+                    <option value="1">London</option>
+                  <option value="2">Helsinki</option>
+                  <option value="4">Dublin</option>
+
+                    </select>
+                  </div>
+                    <div id="mce-responses" class="clear">
+                      <div class="response" id="mce-error-response" style="display:none"></div>
+                      <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_21f56c299f7340e662b9cb44e_cd409607ef" tabindex="-1" value=""></div>
+                      
+                      <div class="present_btn_wrap center_button_wrap">
+                        <div class="clear"><input type="submit" value="join meetup" name="subscribe" id="mc-embedded-subscribe" class="button present_btn center_button"></div>
+                        </div>
+                      </div>
+                  </form>
+                  </div>
+
+                  <!--End mc_embed_signup-->
+
                 </div>
               </div>
             </div>
