--- a/index.html
+++ b/index.html
@@ -74,19 +74,17 @@
                   </div>
 
                   <!-- Begin Mailchimp Signup Form -->
-                  <div id="mc_embed_signup">
+                  <div id="mc_embed_signup" class="center_button_wrap">
                   <form action="https://yousician.us6.list-manage.com/subscribe/post?u=21f56c299f7340e662b9cb44e&amp;id=cd409607ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                       <div id="mc_embed_signup_scroll">
                     
                   <div class="mc-field-group">
-                    <label for="mce-EMAIL">Email Address </label>
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="name@example.com">
                   </div>
 
                   <div class="mc-field-group">
-                    <label for="mce-group[14785]">City </label>
                     <select name="group[14785]" class="REQ_CSS" id="mce-group[14785]">
-                    <option value=""></option>
+                    <option value="">Choose your city</option>
                     <option value="1">London</option>
                   <option value="2">Helsinki</option>
                   <option value="4">Dublin</option>
@@ -100,7 +98,7 @@
                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_21f56c299f7340e662b9cb44e_cd409607ef" tabindex="-1" value=""></div>
                       
                       <div class="present_btn_wrap center_button_wrap">
-                        <div class="clear"><input type="submit" value="join meetup" name="subscribe" id="mc-embedded-subscribe" class="button present_btn center_button"></div>
+                        <div class="clear"><input type="submit" value="join meetup" name="subscribe" id="mc-embedded-subscribe" class="button present_btn center_button mailchimp_input"></div>
                         </div>
                       </div>
                   </form>
