--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <!-- Begin Mailchimp Signup Form -->
                   <div id="mc_embed_signup" class="center_button_wrap">
                   <form action="https://yousician.us6.list-manage.com/subscribe/post?u=21f56c299f7340e662b9cb44e&amp;id=cd409607ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                      <div id="mc_embed_signup_scroll">
+                      <div id="mc_embed_signup_scroll" class="top_values_content">
                     
                   <div class="mc-field-group">
                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="name@example.com">
