--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                   </div>
 
                   <!-- Begin Mailchimp Signup Form -->
+                  <!--
                   <div id="mc_embed_signup" class="center_button_wrap">
                   <form action="https://yousician.us6.list-manage.com/subscribe/post?u=21f56c299f7340e662b9cb44e&amp;id=cd409607ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                       <div id="mc_embed_signup_scroll" class="top_values_content">
@@ -94,7 +95,7 @@
                     <div id="mce-responses" class="clear">
                       <div class="response" id="mce-error-response" style="display:none"></div>
                       <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    </div>
                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_21f56c299f7340e662b9cb44e_cd409607ef" tabindex="-1" value=""></div>
                       
                       <div class="present_btn_wrap center_button_wrap">
@@ -103,7 +104,7 @@
                       </div>
                   </form>
                   </div>
-
+                  -->
                   <!--End mc_embed_signup-->
 
                 </div>
