--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p>Discover local meetups, join other Yousicians and share your experience! Yousician meetups can take many forms - it's all in the hands of the host, and you!</p>
                   </div>
                    <div class="present_btn_wrap center_button_wrap">
-                    <a href="/" class="present_btn center_button">join meetup</a>
+                    <a href="https://www.meetup.com/Yousician-Meetups/" class="present_btn center_button">join meetup</a>
                   </div>
 
                   <!-- Begin Mailchimp Signup Form -->
