--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/"/>
     <meta charset="UTF-8"/>
-    <title>Yousician Meetups – an easy, welcoming and free way to find other musicians</title>
+    <title>Yousician Meetups</title>
     <meta name="viewport" content="width=device-width"/>
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
