images, join link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p>Discover local meetups, join other Yousicians and share your experience! Yousician meetups can take many forms - it's all in the hands of the host, and you!</p>
                   </div>
                    <div class="present_btn_wrap center_button_wrap">
-                    <a href="https://www.meetup.com/Yousician-Meetups/" class="present_btn center_button">join meetup</a>
+                    <a href="https://goo.gl/forms/KvDmVR7qD3iphkB23" class="present_btn center_button">join meetup</a>
                   </div>
 
                   <!-- Begin Mailchimp Signup Form -->
@@ -152,7 +152,7 @@
                 <div class="slider_img_wrap company_mod"><img src="i/home/carousel_meetup_2.jpg" class="slider_img"></div>
               </li>
               <li class="slider_item">
-                <div class="slider_img_wrap company_mod"><img src="i/home/carousel_meetup_1.jpg" class="slider_img"></div>
+                <div class="slider_img_wrap company_mod"><img src="i/home/carousel_meetup_4.jpg" class="slider_img"></div>
               </li>
             </ul>
           </div>
