--- a/mail.html
+++ b/mail.html
@@ -69,16 +69,9 @@
                     <p>Ready to practice in real life? Find fun and motivating music events in your area.</p>
                     <p>Discover local meetups, join other Yousicians and share your experience! Yousician meetups can take many forms - it's all in the hands of the host, and you!</p>
                   </div>
-
-
-                   <div class="present_btn_wrap center_button_wrap">
-                    <a href="https://goo.gl/forms/KvDmVR7qD3iphkB23" class="present_btn center_button">join meetup</a>
-                  </div>
-
-
                   <!-- Begin Mailchimp Signup Form -->
                  
-                  <div id="mc_embed_signup" class="center_button_wrap">
+                  <div id="mc_embed_signup" class="center_button_wrap mailchimp_form">
                   <form action="https://yousician.us6.list-manage.com/subscribe/post?u=21f56c299f7340e662b9cb44e&amp;id=cd409607ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                       <div id="mc_embed_signup_scroll" class="top_values_content">
                     
