--- a/mail.html
+++ b/mail.html
@@ -76,11 +76,11 @@
                       <div id="mc_embed_signup_scroll" class="top_values_content">
                     
                   <div class="mc-field-group">
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="name@example.com" title="The domain portion of the email address is invalid (the portion after the @)." pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*(\.\w{2,})+$" required>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email@example.com">
                   </div>
 
                   <div class="mc-field-group">
-                    <select name="group[14785]" class="REQ_CSS" id="mce-group[14785]" required>
+                    <select name="group[14785]" class="REQ_CSS" id="mce-group[14785]">
                     <option value="">Choose your city</option>
                     <option value="1">London</option>
                   <option value="2">Helsinki</option>
