--- a/mail.html
+++ b/mail.html
@@ -81,7 +81,7 @@
 
                   <div class="mc-field-group">
                     <select name="group[14785]" class="REQ_CSS" id="mce-group[14785]">
-                    <option value="">Choose your city</option>
+                    <option value="" placeholder="Choose your city"></option>
                     <option value="1">London</option>
                   <option value="2">Helsinki</option>
                   <option value="4">Dublin</option>
