--- a/mail.html
+++ b/mail.html
@@ -80,7 +80,7 @@
                   </div>
 
                   <div class="mc-field-group">
-                    <select name="group[14785]" class="REQ_CSS" id="mce-group[14785]">
+                    <select name="group[14785]" class="REQ_CSS required" id="mce-group[14785]">
                     <option value="" disabled selected>Choose your city</option>
                     <option value="1">London</option>
                   <option value="2">Helsinki</option>
