--- a/mail.html
+++ b/mail.html
@@ -76,7 +76,7 @@
                       <div id="mc_embed_signup_scroll" class="top_values_content">
                     
                   <div class="mc-field-group">
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email@example.com">
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email@example.com" required>
                   </div>
 
                   <div class="mc-field-group">
