--- a/mail.html
+++ b/mail.html
@@ -64,7 +64,7 @@
               <div class="about_img_wrap ab_dn_mod"><img src="i/home/sidebar_meetup_2.jpg" class="about_img"></div>
               <div class="about_content_wrap">
                 <div class="about_content">
-                  <h2 class="about_title">Reserve your spot at the next meetup</h2>
+                  <h2 class="about_title">Reserve your spot</h2>
                   <div class="about_text">
                     <p>Ready to practice in real life? Find fun and motivating music events in your area.</p>
                     <p>Discover local meetups, join other Yousicians and share your experience! Yousician meetups can take many forms - it's all in the hands of the host, and you!</p>
