--- a/mail.html
+++ b/mail.html
@@ -71,15 +71,16 @@
                   </div>
                   <!-- Begin Mailchimp Signup Form -->
                  
-                  <div id="mc_embed_signup" class="center_button_wrap mailchimp_form">
+                  <div id="mc_embed_signup" class="center_button_wrap">
+                    <!-- class="mailchimp_form" ^-->
                   <form action="https://yousician.us6.list-manage.com/subscribe/post?u=21f56c299f7340e662b9cb44e&amp;id=cd409607ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                       <div id="mc_embed_signup_scroll" class="top_values_content">
                     
-                  <div class="mc-field-group">
+                  <div class="mc-field-group hidden">
                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email@example.com" required>
                   </div>
 
-                  <div class="mc-field-group">
+                  <div class="mc-field-group hidden">
                     <select name="group[14785]" class="REQ_CSS required" id="mce-group[14785]" required>
                     <option value="" selected="true" disabled="disabled">Choose your city</option>
                     <option value="1">London</option>
