--- a/mail_form.html
+++ b/mail_form.html
@@ -73,7 +73,7 @@
                   </div>
                   <!-- Begin Mailchimp Signup Form -->
                  
-                  <div id="mc_embed_signup" class="center_button_wrap mailchimp_form">
+                  <div id="mc_embed_signup" class="center_button_wrap mailchimp_form contact_block_content">
                   
                   <form action="https://yousician.us6.list-manage.com/subscribe/post?u=21f56c299f7340e662b9cb44e&amp;id=cd409607ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate contact_form validateForm" target="_blank">
                       <div id="mc_embed_signup_scroll" class="top_values_content">
