--- a/mail_form.html
+++ b/mail_form.html
@@ -78,10 +78,6 @@
                   <form action="https://yousician.us6.list-manage.com/subscribe/post?u=21f56c299f7340e662b9cb44e&amp;id=cd409607ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate contact_form validateForm" target="_blank">
                       <div id="mc_embed_signup_scroll" class="top_values_content">
                     
-                  <div class="mc-field-group">
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email@example.com" required>
-                  </div>
-
                   <!-- contact form template -->
                   <ul class="input_list">
                    <li class="input_item">
@@ -89,35 +85,30 @@
                       <dt class="form_cell_title form_v1_mod hline_hide_mod">
                         <label for="user_email">Email</label>
                       </dt>
-                      <dd class="form_field_wrap form_v1_mod hline_hide_mod">
-                        <input name="email" required="required" type="email" id="user_email" placeholder="Email" class="form_field default_mod "/>
+                      <dd class="form_field_wrap form_v1_mod hline_hide_mod mc-field-group">
+                        <input name="EMAIL" required="required" type="email" id="mce-EMAIL" placeholder="Email" class="form_field default_mod required email" required/>
                       </dd>
                     </dl>
                   </li>
                   <li class="input_item">
                     <dl class="form_cell form_cell_v1_mod">
                       <dt class="form_cell_title form_v1_mod hline_hide_mod">
-                        <label for="user_email">City</label>
+                        <label for="user_name">City</label>
                       </dt>
-                      <dd class="form_field_wrap form_v1_mod hline_hide_mod">
-                        <input name="email" required="required" type="email" id="user_email" placeholder="Email" class="form_field default_mod "/>
+                      <dd class="form_field_wrap form_v1_mod hline_hide_mod mc-field-group">
+                        <select name="group[14785]" class="REQ_CSS required form_field default_mod" id="mce-group[14785]" required="required">
+                          <option value="" selected="true" disabled="disabled">Choose your city</option>
+                          <option value="1">London</option>
+                          <option value="2">Helsinki</option>
+                          <option value="4">Dublin</option>
+                        </select>
                       </dd>
                     </dl>
                   </li>
-
                 </ul>
 
                   <!-- contact form template -->
 
-                  <div class="mc-field-group">
-                    <select name="group[14785]" class="REQ_CSS required" id="mce-group[14785]" required>
-                    <option value="" selected="true" disabled="disabled">Choose your city</option>
-                    <option value="1">London</option>
-                  <option value="2">Helsinki</option>
-                  <option value="4">Dublin</option>
-
-                    </select>
-                  </div>
                     <div id="mce-responses" class="clear">
                       <div class="response" id="mce-error-response" style="display:none"></div>
                       <div class="response" id="mce-success-response" style="display:none"></div>
