--- a/mail_form.html
+++ b/mail_form.html
@@ -101,6 +101,7 @@
                           <option value="1">London</option>
                           <option value="2">Helsinki</option>
                           <option value="4">Dublin</option>
+                          <option value="">Moscow</option>
                         </select>
                       </dd>
                     </dl>
