--- a/mail_form.html
+++ b/mail_form.html
@@ -102,6 +102,7 @@
                           <option value="2">Helsinki</option>
                           <option value="4">Dublin</option>
                           <option value="">Moscow</option>
+                          <option value="">Toronto</option>
                         </select>
                       </dd>
                     </dl>
