--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                             <option value="4">Dublin</option>
                             <option value="2">Helsinki</option>
                             <option value="1">London</option>
-                            <!--
-                            <option value="">Moscow</option>
-                            <option value="">Toronto</option>
-                            -->
+                            <option value="8">Moscow</option>
+                            <option value="8">Toronto</option>
+                            <option value="8">Los Angeles</option>
+                            <option value="8">Jakarta</option>
                           </select>
                         </dd>
                       </dl>
