--- a/index.html
+++ b/index.html
@@ -85,13 +85,27 @@
                         <dd class="form_field_wrap form_v1_mod hline_hide_mod mc-field-group">
                           <select name="group[14785]" class="REQ_CSS required form_field default_mod" id="mce-group[14785]" required="required">
                             <option value="" selected="true" disabled="disabled">Choose your city</option>
-                            <option value="4">Dublin</option>
-                            <option value="2">Helsinki</option>
-                            <option value="1">London</option>
-                            <option value="8">Moscow</option>
-                            <option value="8">Toronto</option>
-                            <option value="8">Los Angeles</option>
-                            <option value="8">Jakarta</option>
+                            <option value="8">Atlanta, US</option>
+                            <option value="8">Bangkok, TH</option>
+                            <option value="8">Berlin, DE</option>
+                            <option value="8">Chicago, US</option>
+                            <option value="8">Dallas, US</option>
+                            <option value="4">Dublin, IE</option>
+                            <option value="2">Helsinki, FI</option>
+                            <option value="8">Houston, US</option>
+                            <option value="8">Jakarta, ID</option>
+                            <option value="1">London, UK</option>
+                            <option value="8">Los Angeles, US</option>
+                            <option value="8">Madrid, ES</option>
+                            <option value="8">Mexico City, MX</option>
+                            <option value="8">Moscow, RU</option>
+                            <option value="8">New York, US</option>
+                            <option value="8">Paris, FR</option>
+                            <option value="8">Rome, IT</option>
+                            <option value="8">Sydney, AU</option>
+                            <option value="8">Tokyo, JP</option>
+                            <option value="8">Toronto, CA</option>
+                            <option value="8">Other</option>
                           </select>
                         </dd>
                       </dl>
