added The Open Graph protocol

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <base href="/"/>
     <meta charset="UTF-8"/>
     <title>Yousician Meetups</title>
+    <meta property="og:title" content="Yousician Meetups" />
+    <meta property="og:url" content="https://andrewbells.github.io/" />
+    <meta property="og:image" content="i/FB_cover_double_size.png" />
     <meta name="viewport" content="width=device-width"/>
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
